@@ -1,4 +1,3 @@
-import javax.swing.text.html.Option;
 import java.io.*;
 import java.time.DayOfWeek;
 import java.time.LocalDate;
@@ -10,33 +9,26 @@ public class Main {
 
     // Database of tasks (in memory)
     static List<Task> tasks = new ArrayList<>();
-    static List<Subtask> subtasks = new ArrayList<>();
+    // Single shared scanner — never close it mid-program; closing System.in is permanent
+    static Scanner scanner = new Scanner(System.in);
 
     public static void main(String[] args) {
-
-        // ✅ Load tasks from disk at program start
         loadTasks();
         checkRecurringTasks();
-        Scanner scanner = new Scanner(System.in);
-        String taskName;
-        String attribute;
-        String value;
+
         while (true) {
             System.out.println("\n1. Import Tasks from CSV");
             System.out.println("2. Search Tasks");
             System.out.println("3. View All Tasks");
             System.out.println("4. Export Tasks to CSV");
-            System.out.println("5. Create task");//sub and recurring
-            System.out.println("6. Update task");//project, tag sub and recurring
-            System.out.println("7. Assign self to task");//barely a proper feature??
-            System.out.println("8. Export to ical");
-            System.out.println("9. Edit collaborator loads");
-            System.out.println("10. View Task History");
-            System.out.println("11. Exit");
+            System.out.println("5. Create task");
+            System.out.println("6. Update task");
+            System.out.println("7. View Task History");
+            System.out.println("8. Exit");
 
             System.out.print("Choose option: ");
             int choice = scanner.nextInt();
-            scanner.nextLine();
+            scanner.nextLine(); // consume trailing newline after nextInt()
 
             switch (choice) {
                 case 1:
@@ -61,72 +53,105 @@ public class Main {
                     exportCSV(exportFile);
                     break;
 
-                    case 5:
-                        createTask();
-                        break;
+                case 5:
+                    createTask();
+                    break;
+
                 case 6:
                     System.out.print("Enter Task name: ");
-                    taskName = scanner.nextLine();
-                    int index = tasks.indexOf(taskName);
-                    if (index == -1) {
-                        System.out.println("task not found");
-                        break;
+                    String taskName = scanner.nextLine();
+                    Optional<Task> found = findTask(taskName);
+                    if (!found.isPresent()) {
+                        System.out.println("Task not found.");
+                    } else {
+                        System.out.print("Enter attribute to update (title/description/status/priority/dueDate/projectName/projectDescription/Tag): ");
+                        String attribute = scanner.nextLine();
+                        System.out.print("Enter new value: ");
+                        String value = scanner.nextLine();
+                        updateTask(found.get(), attribute, value);
                     }
-                    else{
-                        System.out.print("Enter attribute value: ");
-                        attribute = scanner.nextLine();
-                        System.out.print("Enter value for attribute: ");
-                        value = scanner.nextLine();
-                        updateTask(tasks.get(index),attribute,value);
-                        break;
-                    }
+                    break;
 
-                case 10:
+                case 7:
                     viewHistory();
                     break;
 
-                case 11:
-                    // ✅ Save tasks to disk before exiting
+                case 8:
                     saveTasks();
-                    System.out.println("Goodbye");
+                    System.out.println("Goodbye.");
                     scanner.close();
                     return;
+
+                default:
+                    System.out.println("Invalid option. Please choose 1-8.");
             }
         }
     }
 
     // =======================
-    // CSV Import / Export (same as before)
+    // Helper: find a task by name
     // =======================
-    //Todo fix with changes in task
-    //todo define class format in csv
-    //split array with /
+    public static Optional<Task> findTask(String name) {
+        for (Task t : tasks) {
+            if (t.taskName.equals(name)) {
+                return Optional.of(t);
+            }
+        }
+        return Optional.empty();
+    }
+
+    // =======================
+    // CSV Import / Export
+    // =======================
+    // Field order: taskName,description,status,priority,dueDate,projectName,
+    //              projectDescription,isRecurring,recurringType,recurringDescription,
+    //              tags(/-separated),subtask names(/-separated)
     public static void importCSV(String filePath) {
-        try {
-            BufferedReader br = new BufferedReader(new FileReader("C:\\Users\\kevin\\IdeaProjects\\SOEN-342\\ProofOfConcept\\ImportTasks\\" + filePath));
+        try (BufferedReader br = new BufferedReader(new FileReader("ProofOfConcept/ImportTasks/" + filePath))) {
             String line;
             while ((line = br.readLine()) != null) {
-                String[] values = line.split(",");
+                String[] v = line.split(",", -1);
+                if (v.length < 12) {
+                    System.out.println("Skipping malformed line: " + line);
+                    continue;
+                }
+                List<String> tags = v[10].isEmpty()
+                        ? new ArrayList<>()
+                        : new ArrayList<>(Arrays.asList(v[10].split("/")));
+                List<History> history = new ArrayList<>();
+                history.add(new History(LocalDate.now(), "imported from CSV"));
                 Task task = new Task(
-                        values[0], values[1], values[2], values[3], LocalDate.parse(values[4]),
-                        values[5], values[6], Boolean.parseBoolean(values[7]), values[8], values[9],
-                        values[10],values[11], values[12]
+                        v[0], v[1], v[2], v[3],
+                        v[4].equals("null") ? null : LocalDate.parse(v[4]),
+                        v[5], v[6],
+                        Boolean.parseBoolean(v[7]),
+                        v[8], v[9], tags,
+                        new ArrayList<>(), history
                 );
                 tasks.add(task);
             }
-            br.close();
-            System.out.println("Tasks imported successfully");
+            System.out.println("Tasks imported successfully.");
         } catch (IOException e) {
-            System.out.println("Error reading file");
+            System.out.println("Error reading file: " + e.getMessage());
         }
     }
-    //todo format lists
-    //Todo fix with project
-    //split array with /
+
+    // Tags and subtask names are joined with "/" so they don't break the comma split on re-import
     public static void exportCSV(String filePath) {
-        try {
-            BufferedWriter bw = new BufferedWriter(new FileWriter(filePath));
+        try (BufferedWriter bw = new BufferedWriter(new FileWriter(filePath))) {
             for (Task t : tasks) {
+                // Build tag string (/-separated)
+                StringBuilder tagStr = new StringBuilder();
+                for (int i = 0; i < t.tags.size(); i++) {
+                    if (i > 0) tagStr.append("/");
+                    tagStr.append(t.tags.get(i));
+                }
+                // Build subtask name string (/-separated)
+                StringBuilder subStr = new StringBuilder();
+                for (int i = 0; i < t.subtasks.size(); i++) {
+                    if (i > 0) subStr.append("/");
+                    subStr.append(t.subtasks.get(i).taskName);
+                }
                 bw.write(
                         t.taskName + "," +
                                 t.description + "," +
@@ -135,31 +160,37 @@ public class Main {
                                 t.dueDate + "," +
                                 t.projectName + "," +
                                 t.projectDescription + "," +
-                                t.isRecurring+","+
-                                t.recurringType+","+
-                                t.recurringDescription+","+
-                                t.tags+","+
-                                t.subtasks+","
+                                t.isRecurring + "," +
+                                t.recurringType + "," +
+                                t.recurringDescription + "," +
+                                tagStr + "," +
+                                subStr
                 );
                 bw.newLine();
             }
-            bw.close();
-            System.out.println("Tasks exported successfully");
+            System.out.println("Tasks exported successfully.");
         } catch (IOException e) {
-            System.out.println("Error writing file");
+            System.out.println("Error writing file: " + e.getMessage());
         }
     }
 
     // =======================
-    // Search / View/
+    // Search / View
     // =======================
-    //todo Add project
     public static void searchTasks(String keyword) {
+        boolean found = false;
         for (Task t : tasks) {
-            if (t.taskName.contains(keyword) || t.description.contains(keyword)||t.projectName.contains(keyword) || t.projectDescription.contains(keyword)||t.status.contains(keyword)||t.tags.contains(keyword)) {
+            if (t.taskName.contains(keyword) ||
+                    t.description.contains(keyword) ||
+                    t.projectName.contains(keyword) ||
+                    t.projectDescription.contains(keyword) ||
+                    t.status.contains(keyword) ||
+                    t.tags.toString().contains(keyword)) {
                 System.out.println(t);
+                found = true;
             }
         }
+        if (!found) System.out.println("No matching tasks found.");
     }
 
     public static void viewTasks() {
@@ -172,380 +203,366 @@ public class Main {
         }
     }
 
-    //constantly checks the due date constraint
-    public static boolean checkTasks() {
-        int missingDate=0;
+    // Returns true when adding another due-date-less task is SAFE (under the limit).
+    // Returns false when the limit is already hit and a due date must be provided.
+    public static boolean canOmitDueDate() {
+        int missingDate = 0;
         for (Task t : tasks) {
-            if (t.dueDate==null) {
-                missingDate++;
-            }
-        }
-        for (Subtask s : subtasks) {
-            if (s.dueDate==null) {
-                missingDate++;
+            if (t.dueDate == null) missingDate++;
+            for (Subtask s : t.subtasks) {
+                if (s.dueDate == null) missingDate++;
             }
         }
         return missingDate < 50;
     }
-    //todo project implement
-    //handles both normal creation and subtask
+
+    // =======================
+    // Create task
+    // =======================
     public static void createTask() {
-        Scanner sc = new Scanner(System.in);
-        String[] recurrHandler=new String[2];
-        boolean flag = true;
         String option;
-        String taskName;
-        String description="";
-        String status;
-        String priority;
-        LocalDate dueDate=null;
-        String projectName;
-        String projectDescription;
-        String recurringChoice;
-        boolean recurring = false;
-        String recurringType="";
-        String recurringDescription="";
-        List<String> tags = new ArrayList<>();
-        List<Subtask> subtasks=  new ArrayList<>();
-        List<History> history = new ArrayList<>();
         System.out.println("What type of event would you like to create?");
-        System.out.println("1. Normal task/recurring task");
+        System.out.println("1. Normal task / recurring task");
         System.out.println("2. Subtask");
-        int choice = sc.nextInt();
+        int choice = scanner.nextInt();
+        scanner.nextLine(); // consume newline after nextInt()
+
         switch (choice) {
-            case 1:
-                System.out.println("What will be the name of the task?");
-                taskName = sc.nextLine();
-                System.out.println("Add description?(Y/N)");
-                option = sc.nextLine();
-                if (option.equals("Y")) {
-                    System.out.println("What will be the description of the task?");
-                    description = sc.nextLine();
+            case 1: {
+                System.out.println("Task name:");
+                String taskName = scanner.nextLine();
+
+                String description = "";
+                System.out.println("Add description? (Y/N)");
+                if (scanner.nextLine().equalsIgnoreCase("Y")) {
+                    System.out.println("Description:");
+                    description = scanner.nextLine();
                 }
-                System.out.println("What will be the status of the task?");
-                status = sc.nextLine();
-                System.out.println("What will be the priority of the task?");
-                priority = sc.nextLine();
-                System.out.println("Add due date?(Y/N)");
-                option = sc.nextLine();
-                if (option.equals("Y")) {
-                    System.out.println("What will be the due date of the task?(YYYY-MM-DD)");
-                    dueDate = LocalDate.parse(sc.nextLine());
-                }else{
-                    if(!checkTasks()){
-                        System.out.println("Too many tasks missing due date. Please put one.(YYYY-MM-DD)");
-                        dueDate = LocalDate.parse(sc.nextLine());
+
+                System.out.println("Status:");
+                String status = scanner.nextLine();
+
+                System.out.println("Priority:");
+                String priority = scanner.nextLine();
+
+                LocalDate dueDate = null;
+                System.out.println("Add due date? (Y/N)");
+                if (scanner.nextLine().equalsIgnoreCase("Y")) {
+                    System.out.println("Due date (YYYY-MM-DD):");
+                    dueDate = LocalDate.parse(scanner.nextLine());
+                } else if (!canOmitDueDate()) {
+                    System.out.println("Too many tasks missing a due date. Please enter one (YYYY-MM-DD):");
+                    dueDate = LocalDate.parse(scanner.nextLine());
+                }
+
+                System.out.println("Project name:");
+                String projectName = scanner.nextLine();
+
+                System.out.println("Project description:");
+                String projectDescription = scanner.nextLine();
+
+                boolean recurring = false;
+                String recurringType = "";
+                String recurringDescription = "";
+                System.out.println("Is this task recurring? (Y/N)");
+                if (scanner.nextLine().equalsIgnoreCase("Y")) {
+                    recurring = true; // FIX: was never set to true
+                    String[] recurrHandler = handleRecurringCreation();
+                    recurringType = recurrHandler[0];
+                    recurringDescription = recurrHandler[1];
+                }
+
+                List<String> tags = new ArrayList<>();
+                boolean addingTags = true;
+                while (addingTags) {
+                    System.out.println("Add a tag? (Y/N)");
+                    if (scanner.nextLine().equalsIgnoreCase("Y")) {
+                        System.out.println("Tag name:");
+                        tags.add(scanner.nextLine());
+                    } else {
+                        addingTags = false;
                     }
                 }
-                System.out.println("What will be the project name of the task?");
-                projectName = sc.nextLine();
-                System.out.println("What will be the project description of the task?");
-                projectDescription = sc.nextLine();
-                System.out.println("Is this task recurring?(Y/N)");
-                recurringChoice = sc.nextLine();
-                if (recurringChoice.equals("Y")) {
-                        recurrHandler= handleReccuringCreation();
-                        recurringType=recurrHandler[0];
-                        recurringDescription=recurrHandler[1];
-                }
-                while(flag){
-                    System.out.println("Add a tag?(Y/N)");
-                    recurringChoice = sc.nextLine();
-                    switch(recurringChoice){
-                        case "Y":
-                            System.out.println("Enter tag name: ");
-                            tags.add(sc.nextLine());
-                            break;
 
-                            case "N":
-                                flag = false;
-                                break;
-
-                    }
-                }
+                List<History> history = new ArrayList<>();
                 history.add(new History(LocalDate.now(), "task created"));
-                tasks.add(new Task(taskName,description,status,priority,dueDate,projectName,projectDescription,recurring,recurringType,recurringDescription,tags,subtasks,history));
-                sc.close();
+                tasks.add(new Task(taskName, description, status, priority, dueDate,
+                        projectName, projectDescription, recurring,
+                        recurringType, recurringDescription,
+                        tags, new ArrayList<>(), history));
+                System.out.println("Task created.");
                 break;
-                case 2:
-                    System.out.println("What is the name of the task that you wish to add a sub task to?");
-                    taskName = sc.nextLine();
-                    int index = tasks.indexOf(taskName);
-                    if (index == -1) {
-                        System.out.println("task not found");
-                    }else{
-                        if(!checkTasks()){
-                            System.out.println("This will create too many tasks without due dates. Please update a task.");
-                            sc.close();
-                        } else if (tasks.get(index).getSubtasks().size()<20) {
-                            System.out.println("What is the name of the sub task?");
-                            taskName = sc.nextLine();
-                            tasks.get(index).createSubtask(taskName);
-                            subtasks.add(tasks.get(index).getSubtasks().getLast());
-                            tasks.get(index).history.add(new History(LocalDate.now(), "subtask added"));
-                            subtasks.getLast().history.add(new History(LocalDate.now(), "task created"));
-                            sc.close();
-                        }else{
-                            System.out.println("There are 20 sub tasks in this task");
-                            sc.close();
-                        }
-                    }
+            }
 
+            case 2: {
+                System.out.println("Name of the parent task:");
+                String parentName = scanner.nextLine();
+                Optional<Task> parent = findTask(parentName);
+                if (!parent.isPresent()) {
+                    System.out.println("Task not found.");
+                    break;
+                }
+                Task parentTask = parent.get();
+                if (parentTask.subtasks.size() >= 20) {
+                    System.out.println("This task already has 20 subtasks.");
+                    break;
+                }
+                if (!canOmitDueDate()) {
+                    System.out.println("Too many tasks missing due dates. Please update an existing task first.");
+                    break;
+                }
+                System.out.println("Subtask name:");
+                String subName = scanner.nextLine();
+                parentTask.createSubtask(subName);
+                parentTask.history.add(new History(LocalDate.now(), "subtask added"));
+                System.out.println("Subtask created.");
+                break;
+            }
+
+            default:
+                System.out.println("Invalid choice.");
         }
     }
 
-    //updates one attribute at a time
-    public static void updateTask(Task task, String Attribute,String value){
-
-        switch (Attribute){
+    // =======================
+    // Update task
+    // =======================
+    public static void updateTask(Task task, String attribute, String value) {
+        switch (attribute) {
             case "title":
                 task.setTaskName(value);
                 task.history.add(new History(LocalDate.now(), "task title updated"));
                 break;
 
-                case "description":
-                    task.setDescription(value);
-                    task.history.add(new History(LocalDate.now(), "task description updated"));
-                    break;
-
-            case "status":
-                        task.setStatus(value);
-                        task.history.add(new History(LocalDate.now(), "task status updated"));
+            case "description":
+                task.setDescription(value);
+                task.history.add(new History(LocalDate.now(), "task description updated"));
                 break;
 
-                case "priority":
-                    task.setPriority(value);
-                    task.history.add(new History(LocalDate.now(), "task priority updated"));
-                    break;
+            case "status":
+                task.setStatus(value);
+                task.history.add(new History(LocalDate.now(), "task status updated"));
+                break;
 
-                    case "dueDate":
-                        if(checkTasks()){
-                            task.setDueDate(LocalDate.parse(value));
-                            task.history.add(new History(LocalDate.now(), "task due date updated"));
-                            break;
+            case "priority":
+                task.setPriority(value);
+                task.history.add(new History(LocalDate.now(), "task priority updated"));
+                break;
 
-                        }else{
-                            if(value.isEmpty()){
-                                Scanner sc = new Scanner(System.in);
-                                LocalDate force;
-                                System.out.println("Please enter a valid date, the 50 due date limit is reached");
-                                String newValue = sc.nextLine();
-                                task.setDueDate(LocalDate.parse(newValue));
-                                task.history.add(new History(LocalDate.now(), "task due date updated"));
-                                sc.close();
-                            }
-                        }
-
-                        case "projectName":
-                            task.setProjectName(value);
-                            task.history.add(new History(LocalDate.now(), "project name updated"));
-                            break;
-
-                            case "projectDescription":
-                                task.setProjectDescription(value);
-                                task.history.add(new History(LocalDate.now(), "project description updated"));
-                                break;
-
-                                case "Tag":
-                                    manageTags(task);
-                                    break;
-
-
-
-        }
-    }
-    public static void viewHistory(){
-        Scanner sc = new Scanner(System.in);
-        System.out.println("Which task history would you like to view?");
-        String taskName = sc.nextLine();
-        int index = tasks.indexOf(taskName);
-        if (index == -1) {
-            System.out.println("task not found");
-            sc.close();
-        }
-        else{
-            System.out.print(tasks.get(index).getHistory());
-            sc.close();
-        }
-    }
-
-    //guard that runs on startup to preform recurrence
-    public static void checkRecurringTasks(){
-        LocalDate today=LocalDate.now();
-        for (Task t : tasks) {
-            if (t.isRecurring && t.dueDate.isBefore(today)){
-                switch(t.recurringType) {
-                    case "daily":
-                        tasks.add(new Task(t.taskName,t.description,"open",t.priority,t.dueDate.plusDays(1),t.projectName,t.projectDescription,t.isRecurring,t.recurringType,t.recurringDescription,t.tags,t.subtasks,new ArrayList<>()));
-                        tasks.getLast().history.add(new History(LocalDate.now(),"Task Creation"));
-                        if (t.status.equals("open")) {
-                            t.setStatus("canceled");
-                            t.history.add(new History(LocalDate.now(), "Task canceled"));
-                        }
-                        break;
-                    case "weekly":
-                        int dayOfWeek= t.dueDate.getDayOfWeek().getValue();
-                        String[] parts = t.recurringDescription.split("/");
-                        boolean[] boolArray = new boolean[parts.length];
-                        for (int i = 0; i < parts.length; i++) {
-                            boolArray[i] = Boolean.parseBoolean(parts[i]);
-                        }
-                        if (dayOfWeek == 7) {
-                            dayOfWeek = 1;
-                        }else {
-                            dayOfWeek++;
-                        }
-                        while(!boolArray[dayOfWeek - 1]){
-                            if (dayOfWeek == 7) {
-                                dayOfWeek = 1;
-                            }else {
-                                dayOfWeek++;
-                            }
-                        }
-                        DayOfWeek day = DayOfWeek.of(dayOfWeek);
-                        LocalDate next= t.dueDate.with(TemporalAdjusters.next(day));
-                        tasks.add(new Task(t.taskName,t.description,"open",t.priority,next,t.projectName,t.projectDescription,t.isRecurring,t.recurringType,t.recurringDescription,t.tags,t.subtasks,new ArrayList<>()));
-                        tasks.getLast().history.add(new History(LocalDate.now(),"Task Creation"));
-                        if (t.status.equals("open")) {
-                            t.setStatus("canceled");
-                            t.history.add(new History(LocalDate.now(), "Task canceled"));
-                        }
-                        break;
-                    case "monthly":
-                        tasks.add(new Task(t.taskName,t.description,"open",t.priority,t.dueDate.plusMonths(1),t.projectName,t.projectDescription,t.isRecurring,t.recurringType,t.recurringDescription,t.tags,t.subtasks,new ArrayList<>()));
-                        tasks.getLast().history.add(new History(LocalDate.now(),"Task Creation"));
-                        if (t.status.equals("open")) {
-                            t.setStatus("canceled");
-                            t.history.add(new History(LocalDate.now(), "Task canceled"));
-                        }
-                        break;
-                    case "numberOfDays":
-                        String[] part = t.recurringDescription.split("/");
-                        LocalDate[] startAndEnd = new LocalDate[part.length];
-                        for (int i = 0; i < part.length; i++) {
-                            startAndEnd[i] = LocalDate.parse(part[i]);
-                        }
-                        long daysBetween = ChronoUnit.DAYS.between(startAndEnd[0], startAndEnd[1]);
-                        LocalDate startDate = startAndEnd[0].plusDays(daysBetween);
-                        LocalDate endDate = startAndEnd[1].plusDays(daysBetween);
-                        String newDescription = startDate+" "+endDate;
-                        tasks.add(new Task(t.taskName,t.description,"open",t.priority,endDate,t.projectName,t.projectDescription,t.isRecurring,t.recurringType,newDescription,t.tags,t.subtasks,new ArrayList<>()));
-                        tasks.getLast().history.add(new History(LocalDate.now(),"Task Creation"));
-                        if (t.status.equals("open")) {
-                            t.setStatus("canceled");
-                            t.history.add(new History(LocalDate.now(), "Task canceled"));
-                        }
-                        break;
+            case "dueDate":
+                if (value.isEmpty() && !canOmitDueDate()) {
+                    System.out.println("50 due-date limit reached. Enter a valid date (YYYY-MM-DD):");
+                    value = scanner.nextLine();
                 }
+                if (!value.isEmpty()) {
+                    task.setDueDate(LocalDate.parse(value));
+                    task.history.add(new History(LocalDate.now(), "task due date updated"));
+                }
+                break; // FIX: was missing, causing fall-through into projectName
+
+            case "projectName":
+                task.setProjectName(value);
+                task.history.add(new History(LocalDate.now(), "project name updated"));
+                break;
+
+            case "projectDescription":
+                task.setProjectDescription(value);
+                task.history.add(new History(LocalDate.now(), "project description updated"));
+                break;
+
+            case "Tag":
+                manageTags(task);
+                break;
+
+            default:
+                System.out.println("Unknown attribute: " + attribute);
+        }
+    }
+
+    // =======================
+    // View history
+    // =======================
+    public static void viewHistory() {
+        System.out.print("Which task history would you like to view? ");
+        String taskName = scanner.nextLine();
+        Optional<Task> found = findTask(taskName);
+        if (!found.isPresent()) {
+            System.out.println("Task not found.");
+        } else {
+            for (History h : found.get().getHistory()) {
+                System.out.print(h);
             }
         }
     }
-    //split array with /
-    public static String[] handleReccuringCreation(){
-        Scanner sc = new Scanner(System.in);
-        String[] output = new String[3];
-        System.out.print("Enter recurrence type:(daily,weekly,monthly,numberOfDays)");
-        String choice=sc.nextLine();
-        switch(choice) {
+
+    // =======================
+    // Recurring task guard (runs on startup)
+    // =======================
+    public static void checkRecurringTasks() {
+        LocalDate today = LocalDate.now();
+        List<Task> toAdd = new ArrayList<>(); // avoid modifying list while iterating
+
+        for (Task t : tasks) {
+            if (!t.isRecurring || t.dueDate == null || !t.dueDate.isBefore(today)) continue;
+
+            Task next = null;
+            switch (t.recurringType) {
+                case "daily":
+                    next = new Task(t.taskName, t.description, "open", t.priority,
+                            t.dueDate.plusDays(1), t.projectName, t.projectDescription,
+                            true, t.recurringType, t.recurringDescription,
+                            new ArrayList<>(t.tags), new ArrayList<>(), new ArrayList<>());
+                    break;
+
+                case "weekly": {
+                    String[] parts = t.recurringDescription.split("/");
+                    boolean[] days = new boolean[7];
+                    for (int i = 0; i < parts.length && i < 7; i++) {
+                        days[i] = Boolean.parseBoolean(parts[i]);
+                    }
+                    int dow = t.dueDate.getDayOfWeek().getValue() % 7; // 0=Sun..6=Sat using ISO mod
+                    // advance to next enabled day
+                    for (int i = 1; i <= 7; i++) {
+                        int candidate = (dow + i) % 7;
+                        if (days[candidate]) {
+                            LocalDate nextDate = t.dueDate.with(
+                                    TemporalAdjusters.next(DayOfWeek.of(candidate == 0 ? 7 : candidate)));
+                            next = new Task(t.taskName, t.description, "open", t.priority,
+                                    nextDate, t.projectName, t.projectDescription,
+                                    true, t.recurringType, t.recurringDescription,
+                                    new ArrayList<>(t.tags), new ArrayList<>(), new ArrayList<>());
+                            break;
+                        }
+                    }
+                    break;
+                }
+
+                case "monthly":
+                    next = new Task(t.taskName, t.description, "open", t.priority,
+                            t.dueDate.plusMonths(1), t.projectName, t.projectDescription,
+                            true, t.recurringType, t.recurringDescription,
+                            new ArrayList<>(t.tags), new ArrayList<>(), new ArrayList<>());
+                    break;
+
+                case "numberOfDays": {
+                    // FIX: description stored as "startDate/endDate" (slash-separated)
+                    String[] part = t.recurringDescription.split("/");
+                    if (part.length < 2) break;
+                    LocalDate start = LocalDate.parse(part[0]);
+                    LocalDate end = LocalDate.parse(part[1]);
+                    long span = ChronoUnit.DAYS.between(start, end);
+                    LocalDate newStart = start.plusDays(span);
+                    LocalDate newEnd = end.plusDays(span);
+                    next = new Task(t.taskName, t.description, "open", t.priority,
+                            newEnd, t.projectName, t.projectDescription,
+                            true, t.recurringType, newStart + "/" + newEnd,
+                            new ArrayList<>(t.tags), new ArrayList<>(), new ArrayList<>());
+                    break;
+                }
+            }
+
+            if (next != null) {
+                next.history.add(new History(LocalDate.now(), "task created by recurrence"));
+                toAdd.add(next);
+                if (t.status.equals("open")) {
+                    t.setStatus("canceled");
+                    t.history.add(new History(LocalDate.now(), "task canceled by recurrence"));
+                }
+            }
+        }
+        tasks.addAll(toAdd);
+    }
+
+    // =======================
+    // Recurring creation helper
+    // =======================
+    // FIX: numberOfDays now stored as "startDate/endDate" (slash-separated) to match checkRecurringTasks
+    public static String[] handleRecurringCreation() {
+        String[] output = new String[2];
+        System.out.print("Recurrence type (daily/weekly/monthly/numberOfDays): ");
+        String choice = scanner.nextLine();
+        switch (choice) {
             case "daily":
                 output[0] = "daily";
                 output[1] = "";
-                sc.close();
-                return output;
+                break;
             case "weekly":
                 output[0] = "weekly";
-                System.out.println("Enter the days of the week: (monday=1,sunday=7, separated by /)");
-                output[1] = sc.nextLine();
-                sc.close();
-                return output;
+                System.out.println("Days of the week as true/false for Mon-Sun, separated by /");
+                System.out.println("Example: true/false/true/false/true/false/false  (Mon, Wed, Fri)");
+                output[1] = scanner.nextLine();
+                break;
             case "monthly":
                 output[0] = "monthly";
                 output[1] = "";
-                sc.close();
-                return output;
-            case "numberOfDays":
-                System.out.println("Enter start date:");
-                output[0] = sc.nextLine();
-                System.out.println("Enter end date:");
-                output[1] = sc.nextLine();
-                output[1]=output[0]+" "+output[1];
-                output[0]="numberOfDays";
-                sc.close();
-                return output;
-
-
-                default:
-                    sc.close();
-                    return output;
-        }
-    }
-    // changes tags one at a time
-    public static void manageTags(Task task){
-        Scanner sc = new Scanner(System.in);
-        System.out.println("Select an option");
-        System.out.println("1. add tag");
-        System.out.println("2. delete tag");
-        int c =  sc.nextInt();
-        switch (c){
-            case 1:
-                System.out.println("enter tag name:");
-                String tagName = sc.next();
-                if (task.tags.contains(tagName)){
-                    System.out.println("tag already exists. try again");
-                    sc.close();
-                    break;
-                }
-                task.tags.add(tagName);
-                task.history.add(new History(LocalDate.now(), "updated tags"));
-                sc.close();
                 break;
-                case 2:
-                    System.out.println("enter tag name:");
-                    String tagNam = sc.next();
-                    if (task.tags.contains(tagNam)){
-                        task.tags.remove(tagNam);
-                        task.history.add(new History(LocalDate.now(), "deleted tag"));
-                        sc.close();
-                        break;
-                    }
-                    System.out.println("tag not found. try again");
-                    sc.close();
-                    break;
+            case "numberOfDays":
+                output[0] = "numberOfDays";
+                System.out.println("Start date (YYYY-MM-DD):");
+                String start = scanner.nextLine();
+                System.out.println("End date (YYYY-MM-DD):");
+                String end = scanner.nextLine();
+                output[1] = start + "/" + end; // FIX: use "/" not " "
+                break;
+            default:
+                System.out.println("Unknown recurrence type. Defaulting to daily.");
+                output[0] = "daily";
+                output[1] = "";
+        }
+        return output;
+    }
+
+    // =======================
+    // Tag management
+    // =======================
+    public static void manageTags(Task task) {
+        System.out.println("1. Add tag   2. Delete tag");
+        int c = scanner.nextInt();
+        scanner.nextLine();
+        System.out.println("Enter tag name:");
+        String tagName = scanner.nextLine();
+        switch (c) {
+            case 1:
+                if (task.tags.contains(tagName)) {
+                    System.out.println("Tag already exists.");
+                } else {
+                    task.tags.add(tagName);
+                    task.history.add(new History(LocalDate.now(), "tag added"));
+                }
+                break;
+            case 2:
+                if (task.tags.remove(tagName)) {
+                    task.history.add(new History(LocalDate.now(), "tag deleted"));
+                } else {
+                    System.out.println("Tag not found.");
+                }
+                break;
+            default:
+                System.out.println("Invalid option.");
         }
     }
-    // =======================
-    // Persistence methods
-    // =======================
 
+    // =======================
+    // Persistence
+    // =======================
     public static void saveTasks() {
+        // Save main task list
         try (ObjectOutputStream out = new ObjectOutputStream(new FileOutputStream("tasks.dat"))) {
             out.writeObject(tasks);
-            System.out.println("Tasks saved to tasks.dat");
-        } catch (IOException e) {
-            System.out.println("Error saving tasks: " + e.getMessage());
-        }
-        try (ObjectOutputStream out = new ObjectOutputStream(new FileOutputStream("subtasks.dat"))) {
-            out.writeObject(tasks);
-            System.out.println("Tasks saved to subtasks.dat");
+            System.out.println("Tasks saved.");
         } catch (IOException e) {
             System.out.println("Error saving tasks: " + e.getMessage());
         }
     }
+
     @SuppressWarnings("unchecked")
     public static void loadTasks() {
         try (ObjectInputStream in = new ObjectInputStream(new FileInputStream("tasks.dat"))) {
             tasks = (List<Task>) in.readObject();
-            System.out.println("Tasks loaded from tasks.dat");
+            System.out.println("Tasks loaded.");
         } catch (FileNotFoundException e) {
             System.out.println("No saved tasks found. Starting fresh.");
-        } catch (IOException | ClassNotFoundException e) {
-            System.out.println("Error loading tasks: " + e.getMessage());
-        }
-        try (ObjectInputStream in = new ObjectInputStream(new FileInputStream("subtasks.dat"))) {
-            tasks = (List<Task>) in.readObject();
-            System.out.println("Tasks loaded from subtasks.dat");
-        } catch (FileNotFoundException e) {
-            System.out.println("No saved subtasks found. Starting fresh. May have errors");
+           // System.out.println(System.getProperty("user.dir"));
         } catch (IOException | ClassNotFoundException e) {
             System.out.println("Error loading tasks: " + e.getMessage());
         }
@@ -553,7 +570,7 @@ public class Main {
 }
 
 // =======================
-// Task class (Serializable)
+// Task class
 // =======================
 class Task implements Serializable {
     private static final long serialVersionUID = 1L;
@@ -569,11 +586,13 @@ class Task implements Serializable {
     String recurringType;
     String recurringDescription;
     List<String> tags = new ArrayList<>();
-    List<Subtask> subtasks=  new ArrayList<>();
+    List<Subtask> subtasks = new ArrayList<>();
     List<History> history = new ArrayList<>();
 
-
-    public Task(String taskName, String description, String status, String priority, LocalDate dueDate, String projectName, String projectDescription, boolean isRecurring, String recurringType, String recurringDescription, List<String> tags, List<Subtask> subtasks, List<History> history) {
+    public Task(String taskName, String description, String status, String priority,
+                LocalDate dueDate, String projectName, String projectDescription,
+                boolean isRecurring, String recurringType, String recurringDescription,
+                List<String> tags, List<Subtask> subtasks, List<History> history) {
         this.taskName = taskName;
         this.description = description;
         this.status = status;
@@ -585,103 +604,67 @@ class Task implements Serializable {
         this.recurringType = recurringType;
         this.recurringDescription = recurringDescription;
         this.tags = tags;
-        this.subtasks = subtasks;
+        this.subtasks = subtasks != null ? subtasks : new ArrayList<>(); // FIX: guard null
         this.history = history;
     }
 
-    //TODO:Proper Project implementation here
     @Override
     public String toString() {
-        String progress;
-        if (subtasks.isEmpty()){
-            progress="";
-        }else{
-            int complete=0;
-            for (Subtask subtask : subtasks){
-                if (subtask.status.equals("complete")){
-                    complete++;
-                }
+        String progress = "";
+        if (!subtasks.isEmpty()) {
+            int complete = 0;
+            for (Subtask s : subtasks) {
+                if ("complete".equalsIgnoreCase(s.status)) complete++;
             }
-            progress = " | completion ("+complete+"/"+subtasks.size()+")";
+            progress = " | completion (" + complete + "/" + subtasks.size() + ")";
         }
-        return "TaskName: " + taskName +
-                " | Description: " + description +
-                " | creation date: " + history.getFirst().timestamp +
+        return "Task: " + taskName +
+                " | Desc: " + description +
+                " | Created: " + (history.isEmpty() ? "unknown" : history.get(0).timestamp) +
                 " | Status: " + status +
                 " | Priority: " + priority +
-                " | DueDate: " + dueDate +
-                " | ProjectName: " + projectName +
-                " | ProjectDescription: " + projectDescription +
-                " | isRecurring: " + isRecurring +
-                " | recurringType: " + recurringType+
-                " | recurringDescription: " + recurringDescription +
-                " | tags: " + tags
-                + " | subtasks: " + subtasks+progress;
+                " | Due: " + dueDate +
+                " | Project: " + projectName +
+                " | Recurring: " + isRecurring +
+                (isRecurring ? " (" + recurringType + ")" : "") +
+                " | Tags: " + tags +
+                " | Subtasks: " + subtasks.size() + progress;
     }
 
-    public void setTaskName(String taskName) {
-        this.taskName = taskName;
+    // Creates a subtask inheriting sensible defaults from the parent
+    public void createSubtask(String title) {
+        List<History> subHistory = new ArrayList<>();
+        subHistory.add(new History(LocalDate.now(), "subtask created"));
+        // FIX: pass correct 12-arg constructor; subtasks list is new empty list, not null
+        this.subtasks.add(new Subtask(
+                title, this.description, "open", this.priority,
+                this.dueDate, this.projectName, this.projectDescription,
+                false, "", "", new ArrayList<>(this.tags),
+                new ArrayList<>(), subHistory
+        ));
     }
 
-    public void setDescription(String description) {
-        this.description = description;
-    }
-
-    public void setStatus(String status) {
-        this.status = status;
-    }
-
-    public void setPriority(String priority) {
-        this.priority = priority;
-    }
-
-    public void setDueDate(LocalDate dueDate) {
-        this.dueDate = dueDate;
-    }
-
-    public void setProjectName(String projectName) {
-        this.projectName = projectName;
-    }
-
-    public void setProjectDescription(String projectDescription) {
-        this.projectDescription = projectDescription;
-    }
-
-    public void setRecurring(boolean recurring) {
-        isRecurring = recurring;
-    }
-
-    public void setRecurringType(String recurringType) {
-        this.recurringType = recurringType;
-    }
-
-    public void setRecurringDescription(String recurringDescription) {
-        this.recurringDescription = recurringDescription;
-    }
-
-    public List<History> getHistory() {
-        return history;
-    }
-
-    //TODO:Proper Project implementation here
-    //creates a subtask that is open and with recurrence values empty or false
-    public void createSubtask(String title){
-        this.subtasks.add(new Subtask(title,this.description,"Open", this.priority,this.dueDate,this.projectName,this.projectDescription,false,"","",this.tags,null,new ArrayList<>()));
-    }
-
-    public String getStatus() {
-        return status;
-    }
-
-    public List<Subtask> getSubtasks() {
-        return subtasks;
-    }
+    public void setTaskName(String taskName)           { this.taskName = taskName; }
+    public void setDescription(String description)     { this.description = description; }
+    public void setStatus(String status)               { this.status = status; }
+    public void setPriority(String priority)           { this.priority = priority; }
+    public void setDueDate(LocalDate dueDate)          { this.dueDate = dueDate; }
+    public void setProjectName(String projectName)     { this.projectName = projectName; }
+    public void setProjectDescription(String pd)       { this.projectDescription = pd; }
+    public void setRecurring(boolean recurring)        { this.isRecurring = recurring; }
+    public void setRecurringType(String rt)            { this.recurringType = rt; }
+    public void setRecurringDescription(String rd)     { this.recurringDescription = rd; }
+    public String getStatus()                          { return status; }
+    public List<Subtask> getSubtasks()                 { return subtasks; }
+    public List<History> getHistory()                  { return history; }
 }
 
 // =======================
 // History class
 // =======================
-class History{
+class History implements Serializable { // FIX: must be Serializable since Task is
+    private static final long serialVersionUID = 1L;
+
     LocalDate timestamp;
     String description;
 
@@ -692,43 +675,86 @@ class History{
 
     @Override
     public String toString() {
-        return "Timestamp: "+this.timestamp+" | Description:"+this.description+"\n";
+        return "  [" + timestamp + "] " + description + "\n";
     }
 }
 
-
-
-//TODO:Proper Project implementation here
+// =======================
+// Subtask class
+// =======================
 class Subtask extends Task {
+    private static final long serialVersionUID = 2L;
+
     Collaborator collaborator;
 
-    public Subtask(String taskName, String description, String status, String priority, LocalDate dueDate, String projectName, String projectDescription,boolean isRecurring, String recurringType, String recurringDescription, List<String> tags, List<Subtask> subtasks, List<History> history, Collaborator collaborator) {
-        super(taskName, description, status, priority, dueDate, projectName, projectDescription, isRecurring, recurringType, recurringDescription, tags, subtasks, history);
-        this.collaborator = collaborator;
+    // Constructor without collaborator (used by createSubtask)
+    public Subtask(String taskName, String description, String status, String priority,
+                   LocalDate dueDate, String projectName, String projectDescription,
+                   boolean isRecurring, String recurringType, String recurringDescription,
+                   List<String> tags, List<Subtask> subtasks, List<History> history) {
+        super(taskName, description, status, priority, dueDate, projectName, projectDescription,
+                isRecurring, recurringType, recurringDescription, tags, subtasks, history);
     }
-    public Subtask(String taskName, String description, String status, String priority, LocalDate dueDate, String projectName, String projectDescription,boolean isRecurring, String recurringType, String recurringDescription, List<String> tags, List<Subtask> subtasks, List<History> history) {
-        super(taskName, description, status, priority, dueDate, projectName, projectDescription, isRecurring, recurringType, recurringDescription, tags, subtasks, history);
+
+    // Constructor with collaborator
+    public Subtask(String taskName, String description, String status, String priority,
+                   LocalDate dueDate, String projectName, String projectDescription,
+                   boolean isRecurring, String recurringType, String recurringDescription,
+                   List<String> tags, List<Subtask> subtasks, List<History> history,
+                   Collaborator collaborator) {
+        super(taskName, description, status, priority, dueDate, projectName, projectDescription,
+                isRecurring, recurringType, recurringDescription, tags, subtasks, history);
+        this.collaborator = collaborator;
     }
 
     public void setCollaborator(Collaborator collaborator) {
         this.collaborator = collaborator;
     }
-    //TODO:string reformat?
+
     @Override
     public String toString() {
-        return "Subtask{" +
-                "collaborator=" + collaborator +
-                ", taskName='" + taskName + '\'' +
-                ", status='" + status + '\'' +
-                '}';
+        return "Subtask{name='" + taskName + "', status='" + status + "', collaborator=" + collaborator + "}";
     }
 }
 
-//TODO:Proper collaborator implementation here
-class Collaborator{
+// =======================
+// Collaborator class
+// =======================
+class Collaborator implements Serializable { // FIX: must be Serializable
+    private static final long serialVersionUID = 3L;
 
     @Override
     public String toString() {
         return "Collaborator{}";
+    }
+}
+
+
+
+class Project implements Serializable {
+    private static final long serialVersionUID = 4L;
+
+    String name;
+    String description;
+    List<Task> tasks = new ArrayList<>();
+
+    public Project(String name, String description) {
+        this.name = name;
+        this.description = description;
+    }
+
+    public void addTask(Task task) {
+        tasks.add(task);
+    }
+
+    public void removeTask(String taskName) {
+        tasks.removeIf(t -> t.taskName.equals(taskName));
+    }
+
+    @Override
+    public String toString() {
+        return "Project: " + name +
+                " | Desc: " + description +
+                " | Tasks: " + tasks.size();
     }
 }
